
	- Fixed some truly bizarre style goofs with the setup screents. 

	- Fixed a bug that saves dates when you try to input times in 14 AD instead
	  of 2014.  Citizens of the Roman Empire and subjects of the Han Chinese
	  Dynasty are not permitted to use Tabroom.com.
	
	- Fixed a bug with judge days on partial judges. 

	- Added a manual room assigner drag and drop system to the pairings to go
	  along with the manual judge assigner of the same stripe.

==CHANGES RELEASED 9.8.2014==

	- Gave Menick one less reason to send potshots my way with a color design
	  change on the hired judging request screen.  Worry not, he'll find more.

	- Fixed a bug restoring the School Judge Obligation Check report on
	  register/reports. 

	- Fixed a weird bug with the display of tiered pref sheets. 

	- Fixed a bug where you could not strike judges by days all of a sudden.

	- You can now download CSVs of past pref sheets under the Results tab when
	  you first log in.

	- The manual powermatcher now uses a javascript implementation to be
	  instantly responsive and not have to reload every time you pair a debate;
	  it is much more usable now even with larger divisions.  Props to the good
	  Dr Bruschke for doing the legwork here.

	- Added a feature under Blast Emails & Texts under the Schematics where you
	  can send texts to All, only Entries and only Judges, and also send texts
	  exclusively to rounds that have not started, rounds that have not voted,
	  and rounds that have not confirmed their ballots, rather than the whole
	  debate.  (Bug #237). 

	  You can also use this feature to send a longer message to the division
	  without a pairing attached to each message. 

	- Added a Rounds Judge report (CSV file) under Results -> Reports so if you
	  have hired judges you're paying by the round you can see what they
	  actually judged.

	- Put in some fixes where the college tournaments etc would not appear on
	  the NSDA Universal Calendar

==CHANGES RELEASED 8.27.2014==
