@@ -122,6 +122,21 @@
 		$judge_constraint{$judge."-".$entry}++;
 	}
 
+	my $conflict_strike_sth = $dbh->prepare("
+		select judge.id, entry.id
+		from judge, strike, entry
+		where judge.id = strike.judge
+		and judge.judge_group = ".$group->id."
+		and strike.type = \"conflict\"
+		and strike.school = entry.school
+	");
+
+	$conflict_strike_sth->execute;
+
+	while (my ($judge, $entry) = $conflict_strike_sth->fetchrow_array() ) {
+		$judge_constraint{$judge."-".$entry}++;
+	}
+
 	my $entry_strike_sth = $dbh->prepare("
 		select judge.id, strike.entry
 		from judge, strike
