@@ -23,7 +23,7 @@
 	");
 
 	my $aff_sth = $dbh->prepare("
-		select judge.id, rating.rating_tier,round(rating.percentile,1)
+		select judge.id, rating.rating_tier, round(rating.percentile,1), panel.id, rating.entry, rating.id
 		from panel, ballot, judge, rating, round, event
 		where round.timeslot = ".$round->timeslot->id."
 		and event.judge_group = ".$judge_group->id."
@@ -33,6 +33,7 @@
 		and ballot.judge = judge.id
 		and panel.flight = ".$flight."
 		and ballot.entry = rating.entry
+		and rating.judge = ballot.judge
 		and ballot.side = 1
 	");
 
@@ -47,6 +48,7 @@
 		and ballot.judge = judge.id
 		and panel.flight = ".$flight."
 		and ballot.entry = rating.entry
+		and rating.judge = ballot.judge
 		and ballot.side = 2
 	");
 
@@ -72,7 +74,7 @@
 
 	my %judge_rating = ();
 
-	while (my ($judge, $tier, $percentile)  = $aff_sth->fetchrow_array() ) {
+	while (my ($judge, $tier, $percentile, $panel, $entry, $rating)  = $aff_sth->fetchrow_array() ) {
 		$judge_rating{$judge} = $percentile if $percentile;
 		$judge_rating{$judge} = $tier_name{$tier} if $tier;
 	}
