@@ -19,6 +19,8 @@
 
 	undef $prefs if $prefs eq "none";
 
+	my $round_name = $round->name;
+
 	my $debate++;
 	undef $debate if $event->type eq "speech";
 	undef $debate if $event->type eq "congress";
@@ -41,7 +43,7 @@
 	my $judge_use_ref = $m->comp("/funclib/judge_use.mas", round_id => $round->id);
 	my %judge_use = %{$judge_use_ref} if $judge_use_ref;
 
-	my %school_name = map {$_->id => $_ }  $tourn->schools;
+	my %school_name = map {$_->id => $_->name}  $tourn->schools;
 
 	Tab::Judge->set_sql( available_judges => "
 		select distinct judge.id, judge.first, judge.last, judge.tab_rating, judge.obligation, judge.hired
@@ -96,7 +98,7 @@
 	my $dbh = Tab::DBI->db_Main();
 
 	my $this_round_sth = $dbh->prepare("
-		select distinct panel.id, ballot.chair, ballot.judge, ballot.entry, entry.code, ballot.side, ballot.speakerorder, panel.flight
+		select distinct panel.id, ballot.chair, ballot.judge, ballot.entry, entry.code, ballot.side, ballot.speakerorder, panel.flight, panel.bracket
 		from panel, ballot, entry
 		where panel.round = ".$round->id."
 		and panel.id = ballot.panel
@@ -109,6 +111,7 @@
 	my %panel_chair;
 	my %panel_judge;
 	my %panel_entry;
+	my %panel_bracket;
 	my %entry_side;
 	my %entry_order;
 	my %entry_code;
@@ -116,16 +119,18 @@
 
 	$this_round_sth->execute;
 
-	while (my ($panel, $chair, $judge, $entry, $code, $side, $order)  = $this_round_sth->fetchrow_array() ) {
+	while (my ($panel, $chair, $judge, $entry, $code, $side, $order, $flight, $bracket)  = $this_round_sth->fetchrow_array() ) {
 		push @{$panel_judge{$panel}}, $judge;
 		$used_judge{$judge}++;
 		push @{$panel_entry{$panel}}, $entry;
+		$panel_bracket{$panel} = $bracket;
 		$entry_side{$entry} = $side;
 		$entry_order{$entry} = $order;
 		$entry_code{$entry} = $code;
 	}
 
 	my %judge_constraints = $m->comp("/funclib/judge_cannotsee.mas", group => $group, round => $round);
+
 	my %judge_ratings = $m->comp("/funclib/event_judgeprefs.mas", event => $event, style => "individual");
 
 </%init>
@@ -228,6 +233,7 @@
 								foreach my $entry (@{$panel_entry{$panel}}) { 
 
 									next PANEL if $judge_constraints{$judge_id."-".$entry};
+
 									next if $done{$entry."e"}++;
 
 									if ($debate) { 
@@ -298,7 +304,7 @@
 									}
 </%perl>
 
-									<option value="<% $panel %>-<% $judge_id %>"><% $rating_string{$panel} %> [<% $avail_string %> <% $judge_string %>] <% $entry_string{$panel} %> </option>
+									<option value="<% $panel %>-<% $judge_id %>"><% $rating_string{$panel} %> [<% $avail_string %> <% $judge_string %>] <% $panel_bracket{$panel}."-".($round_name - $panel_bracket{$panel}) %> <% $entry_string{$panel} %> </option>
 %								}
 %							}
 						</select>
